syntax = "proto3";
package api;

option go_package = "./";

message Pagination {
    int32 limit = 1;                        // 1ページあたりの件数
    int32 page = 2;                         // 現在のページ番号
    int32 prev = 3;                         // 前のページ番号
    int32 next = 4;                         // 次のページ番号
    int32 totalPage = 5;                    // ページ総件数
    int32 totalCount = 6;                   // レコード総件数
}
